5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4466/executions/1577_1333.log
== SUBMITION (2019-03-26 19:13:02) 
-- CODE:
expressao = 
print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.140012
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:13:10) 
-- CODE:
print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.139735
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
